--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
   crossorigin></script>
 
+
 <script>var Alert = ReactBootstrap.Alert;</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -40,6 +41,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_rzt0y-3yQ0x1ZUoyijKOpiOJKlmNPFY&libraries=places"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
